# stonks

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  defines.h  main.cpp
.github/workflows/: build-test.yaml  clang-format.yaml  doxygen.yaml
benchmarks/: CMakeLists.txt  benchmark_tests.cpp
cmake/: Config.cmake.in  ConfigureInstallation.cmake  CxxFlags.cmake  Environmnent.cmake  FindBenchmark.cmake  FindCcache.cmake  FindDoxygen.cmake  FindGTest.cmake  Options.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  defines.h
src/order_book/: book-fwd.h  book.cpp  book.h  book_tester-fwd.h  book_tester.h  order-fwd.h  order.cpp  order.h
src/stonks/order_book/: book-fwd.h  book.h  book_tester-fwd.h  book_tester.h  order-fwd.h  order.h
src/stonks/storage/: bestNStorage-fwd.h  bestNStorage.h
src/stonks/utils/: defines.h  proxy_output_iterator-fwd.h  proxy_output_iterator.h
src/storage/: bestNStorage-fwd.h  bestNStorage.h
src/utils/: defines.h  proxy_output_iterator-fwd.h  proxy_output_iterator.h
tests/: CMakeLists.txt  test.cpp
